Added different versions on Swagger
