# storage/api-docs/api-docs-v1.json
@@ -1,21 +1,15 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Google Ads App",
+        "title": "Google Ads App Version 1",
         "description": "Google Ads App project",
         "contact": {
             "email": "admin@admin.com"
         },
         "version": "1.0.0"
     },
-    "servers": [
-        {
-            "url": "http://api-google-ads.loc/",
-            "description": "Google Ads API Server"
-        }
-    ],
     "paths": {
-        "/api/auth/register": {
+        "/api/v1/auth/register": {
             "post": {
                 "tags": [
                     "Auth"
@@ -75,6 +69,10 @@
                                             "type": "string",
                                             "example": "Validation errors."
                                         },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
+                                        },
                                         "data": {
                                             "properties": {
                                                 "name": {
@@ -121,6 +119,10 @@
                                             "type": "string",
                                             "example": "You have successfully registered."
                                         },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
+                                        },
                                         "data": {
                                             "properties": {
                                                 "access_token": {
@@ -147,7 +149,7 @@
                 }
             }
         },
-        "/api/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "tags": [
                     "Auth"
@@ -197,6 +199,10 @@
                                             "type": "string",
                                             "example": "Validation errors."
                                         },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
+                                        },
                                         "data": {
                                             "properties": {
                                                 "email": {
@@ -236,6 +242,10 @@
                                             "type": "string",
                                             "example": "Unauthorized. Your credentials are wrong"
                                         },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
+                                        },
                                         "data": {
                                             "type": "object"
                                         }
@@ -258,6 +268,10 @@
                                         "message": {
                                             "type": "string",
                                             "example": "You have successfully logged in."
+                                        },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
                                         },
                                         "data": {
                                             "properties": {
@@ -285,7 +299,7 @@
                 }
             }
         },
-        "/api/auth/me": {
+        "/api/v1/auth/me": {
             "post": {
                 "tags": [
                     "Auth"
@@ -307,6 +321,10 @@
                                         "message": {
                                             "type": "string",
                                             "example": "Token not provided"
+                                        },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
                                         },
                                         "data": {
                                             "type": "object"
@@ -330,6 +348,10 @@
                                         "message": {
                                             "type": "string",
                                             "example": "You have successfully logged in."
+                                        },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
                                         },
                                         "data": {
                                             "properties": {
@@ -374,7 +396,7 @@
                 ]
             }
         },
-        "/api/auth/logout": {
+        "/api/v1/auth/logout": {
             "post": {
                 "tags": [
                     "Auth"
@@ -396,6 +418,10 @@
                                         "message": {
                                             "type": "string",
                                             "example": "Token not provided"
+                                        },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
                                         },
                                         "data": {
                                             "type": "object"
@@ -420,6 +446,10 @@
                                             "type": "string",
                                             "example": "You have successfully logged out."
                                         },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
+                                        },
                                         "data": {
                                             "type": "object"
                                         }
@@ -437,7 +467,7 @@
                 ]
             }
         },
-        "/api/auth/refresh": {
+        "/api/v1/auth/refresh": {
             "post": {
                 "tags": [
                     "Auth"
@@ -459,6 +489,10 @@
                                         "message": {
                                             "type": "string",
                                             "example": "The token has been blacklisted"
+                                        },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
                                         },
                                         "data": {
                                             "type": "object"
@@ -482,6 +516,10 @@
                                         "message": {
                                             "type": "string",
                                             "example": "You have successfully refreshed token."
+                                        },
+                                        "version": {
+                                            "type": "string",
+                                            "example": "v1"
                                         },
                                         "data": {
                                             "properties": {
